# moka

./: .env.example  .gitignore  AGENTS.md  README.md  _headers  _redirects  deploy-worker.sh  index.html  package-lock.json  package.json  private.pem  public.pem  vite.config.js  wrangler.jsonc  xhs-generator-v5.jsx
.github/workflows/: release.yml
cli/: README.md  package-lock.json  package.json
cli/src/: bannedWords.js  config.js  index.js  llm.js  prompts.js  renderer.js
functions/api/: llm.js  proxy.js
scripts/: generate-keys.js  tauri-dev.js  update-version.js
src/: App.css  App.jsx  constants.js  index.css  main.jsx  worker.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AIDesignControls.jsx  AIDesignGenerator.css  AIDesignGenerator.jsx  AISplitStyleRenderer.jsx  AIStyleRenderer.jsx  ReferenceImageUploader.css  ReferenceImageUploader.jsx  VersionHistory.jsx
src/components/common/: DragRow.jsx  EditableEmoji.jsx  EditableText.jsx  Icons.jsx  LLMConfigModal.jsx
src/components/layout/: ContentPanel.jsx  ControlPanel.jsx  EditorLayout.jsx  Header.jsx  ModeToggle.jsx  TopBar.jsx  (+7 more)
src/constants/: index.js
src/hooks/: useDragReorder.js  useHtml2Canvas.js  useHtmlToImage.js  useLanguage.jsx  useTheme.js
src/i18n/: en.js  zh.js
src/prompts/: aiDesign.js  aiDesignPrompt.js  common.js  content.js  index.js
src/services/: json-extractor.js  llm.js
src/utils/: bannedWords.js  crypto.js  env.js
workers/: README.md  llm-proxy.js  wrangler.toml
(+57 files in other folders)
